--- a/package.json
+++ b/package.json
@@ -111,5 +111,14 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "proxy": {
+    "/api":{
+      "target":"http://localhost:8080/vote",
+      "ws": true,
+      "pathRewrite": {
+        "/api": "/"
+      }
+    }
   }
 }
